gateway aggregator pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=microservice-pattern
+sec01.product.service=http://localhost:7070/sec01/product/
+sec01.promotion.service=http://localhost:7070/sec01/promotion/
+sec01.review.service=http://localhost:7070/sec01/review/
