--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 sec01.product.service=http://localhost:7070/sec01/product/
 sec01.promotion.service=http://localhost:7070/sec01/promotion/
 sec01.review.service=http://localhost:7070/sec01/review/
+
+sec02.delta.service=http://localhost:7070/sec02/delta/
+sec02.jetblue.service=http://localhost:7070/sec02/jetblue/
+sec02.frontier.service=http://localhost:7070/sec02/frontier/
